--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,24 @@
       <version>${hsqldb.version}</version>
     </dependency>
 
+    <build>
+      <plugins>
+	<plugin>
+          <!-- Build an executable JAR -->    
+          <groupId>org.apache.maven.plugins</groupId>
+	  <artifactId>maven-jar-plugin</artifactId>
+          <version>3.1.0</version>
+          <configuration>
+		<archive>
+			<manifest>
+				<mainClass>**/.mvn/**</mainClass>
+			</manifest>
+		</archive>
+          </configuration>
+        </plugin>
+      </plugins>
+    </build>
+    
     <!-- Test dependencies -->
     <dependency>
       <groupId>org.junit.jupiter</groupId>
