--- a/pom.xml
+++ b/pom.xml
@@ -178,7 +178,7 @@
 	    <archive>
 	      <manifest>
 		<addClasspath>true</addClasspath>
-		<mainClass>fully.qualified.MainClass</mainClass>
+		<mainClass>org.mybatis.jpetstore</mainClass>
 	      </manifest>
 	    </archive>
 	  </configuration>
