--- a/pom.xml
+++ b/pom.xml
@@ -1,20 +1,15 @@
 <?xml version="1.0"?>
 <!--
-
        Copyright 2010-2020 the original author or authors.
-
        Licensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at
-
           http://www.apache.org/licenses/LICENSE-2.0
-
        Unless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.
-
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
@@ -29,7 +24,7 @@
   <groupId>org.mybatis</groupId>
   <artifactId>jpetstore</artifactId>
   <version>6.0.3-SNAPSHOT</version>
-  <packaging>jar</packaging>
+  <packaging>war</packaging>
 
   <name>JPetStore Demo 6</name>
   <url>http://www.mybatis.org</url>
@@ -119,7 +114,7 @@
       <artifactId>hsqldb</artifactId>
       <version>${hsqldb.version}</version>
     </dependency>
-    
+
     <!-- Test dependencies -->
     <dependency>
       <groupId>org.junit.jupiter</groupId>
@@ -169,20 +164,18 @@
     <finalName>jpetstore</finalName>
     <pluginManagement>
       <plugins>
-	<plugin>
-	<!-- Build an executable JAR -->
+        <plugin>
           <groupId>org.apache.maven.plugins</groupId>
-	  <artifactId>maven-jar-plugin</artifactId>
-	  <version>3.2.0</version>
-	  <configuration>
-	    <archive>
-	      <manifest>
-		<addClasspath>true</addClasspath>
-		<mainClass>org.mybatis.jpetstore</mainClass>
-	      </manifest>
-	    </archive>
-	  </configuration>
-	</plugin>
+          <artifactId>maven-war-plugin</artifactId>
+          <version>3.2.3</version>
+          <configuration>
+            <archive>
+              <manifestEntries>
+                <Dependencies>jdk.unsupported</Dependencies>
+              </manifestEntries>
+            </archive>
+          </configuration>
+        </plugin>
         <plugin>
           <artifactId>maven-failsafe-plugin</artifactId>
           <version>3.0.0-M4</version>
@@ -417,3 +410,4 @@
   </profiles>
 
 </project>
+
